--- a/package.json
+++ b/package.json
@@ -12,12 +12,19 @@
     "@mdx-js/react": "^3.1.1",
     "@next/mdx": "^16.0.0",
     "@types/mdx": "^2.0.13",
+    "gray-matter": "^4.0.3",
+    "katex": "^0.16.25",
     "next": "16.0.0",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "rehype-katex": "^7.0.1",
+    "remark-frontmatter": "^5.0.0",
+    "remark-math": "^6.0.0",
+    "remark-mdx-frontmatter": "^5.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.16",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^24.9.1",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
